updated site files v2

--- a/about.html
+++ b/about.html
@@ -17,14 +17,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="/assets/styles.css" rel="stylesheet">
 
- <title>Your awesome title</title>
+ <title>Danny · About</title>
     
 </head>
   
   <body>
     <main>
-         <div class="py-3 container">
-      <div class="row">
+         <div class="py-3 container-fluid">
+      <div class="row mx-2">
         <div class="col">
           <a href="#">
             <h3><a href="/">danny pagano</a></h3>
@@ -42,19 +42,19 @@
     </div>
 
 
-     <div class="py-5 container">
-  <div class="row row-col-1 rows-cols-lg-2">
-    <div class="col">
-      <div class="pb-3">
+     <div class="py-5 container-fluid">
+  <div class="row row-cols-1 row-cols-md-2 mx-2">
+    <div class="col justify-content-center">
+      <div class="pb-5" style="max-width: 600px">
         <img height="auto" width="100%" src="../assets/headshot.jpg">
       </div>
     </div>
-      <div class="col pb-3">
-          <p>I’m Danny Pagano – a designer and photographer from Tucson, Arizona. I design simple things for clients with complex products and ideas.</p>
+      <div class="col pb-5">
+          <h4>I’m Danny Pagano – a designer and photographer from Tucson, Arizona. I design simple things for clients with complex products and ideas.</h4>
   
-  <p>I’ve been a professional designer with <a href="https://godatdesign.com">Godat Design</a> for the last six years, and I’m now taking on freelance work and exploring options for full or part time employment.</p>
+  <h4>I’ve been a professional designer with <a href="https://godatdesign.com">Godat Design</a> for the last six years, and I’m now taking on freelance work and exploring options for full or part time employment.</h4>
   
-        <p>For more about me, you can check out <a href="https://slickbrownfox.com">slickbrownfox.com</a></p>
+       <h4>For more about me, you can check out <a href="https://slickbrownfox.com">slickbrownfox.com</a></h4>
   
         <div class="row">
           <div class="col-sm-6 pb-3">
@@ -63,7 +63,7 @@
             <p>Visual Design<br>
               Graphic Design<br>
               Web Design<br>
-              Photograhy</p>
+              Photography</p>
 
           </div>
           <div class="col-sm-6 pb-3">
@@ -83,8 +83,8 @@
 
 
      <footer class="py-5">
-  <div class="container">
-    <div class="row row-cols-1 row-cols-sm-2">
+  <div class="container-fluid">
+    <div class="row row-cols-1 row-cols-sm-2 mx-2">
       <div class="col">
         <p class=" mb-1">
           <a href="#">Back to top</a>
@@ -93,7 +93,7 @@
 
       
       <div class="col">
-        <div class="row">
+        <div class="row row-cols-1 row-cols-sm-2">
           <div class="col-sm-6">
             <p class="text-muted">© 2021 Danny Pagano</p>
           </div>
@@ -103,7 +103,7 @@
             <ul>
               <a href='/'>work</a>
               <a href='/about'>about</a>
-            </ul>
+      </ul>
           </div>
           </div>
         </div>
