changes to _config.yml

--- a/work/Mesana.html
+++ b/work/Mesana.html
@@ -17,7 +17,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="/assets/styles.css" rel="stylesheet">
 
- <title>Danny · Moonfest</title>
+ <title>Danny · Mesana</title>
     
 </head>
   
@@ -45,11 +45,11 @@
      <div class="py-5 container">
   <div class="row rows-cols-lg-2">
     <div class="col">
-      <h1>Moonfest</h1>
+      <h1>Mesana</h1>
         <h6>Author: </h6>
     	</div>
      	<div class="col">
-       <h4>A logo for the University of Arizona's celebration of the Lunar Landing half centenary.</h4>
+       <h4></h4>
     </div>
   </div>
 </div>
