--- a/index.html
+++ b/index.html
@@ -89,6 +89,20 @@
      	<div class="col mb-2">
           <div>
           	<div class="ratio ratio-16x9 pb-2">
+           		<a href="/work/Mesana"><img width="100%" src="../assets/1920x1080-test.jpg"></a>
+       		</div>
+            <div>
+              <a href="/work/Mesana">
+            	<h5>Mesana</h5>
+              <p class="text-muted"></p>
+            </div>
+           </a>
+          </div>
+        </div>
+      
+     	<div class="col mb-2">
+          <div>
+          	<div class="ratio ratio-16x9 pb-2">
            		<a href="/work/clip-health"><img width="100%" src="../assets/1920x1080-test.jpg"></a>
        		</div>
             <div>
@@ -103,12 +117,12 @@
      	<div class="col mb-2">
           <div>
           	<div class="ratio ratio-16x9 pb-2">
-           		<a href="/work/moonfest"><img width="100%" src="../assets/1920x1080-test.jpg"></a>
+           		<a href="/work/Testing"><img width="100%" src="../assets/1920x1080-test.jpg"></a>
        		</div>
             <div>
-              <a href="/work/moonfest">
-            	<h5>Moonfest</h5>
-              <p class="text-muted"></p>
+              <a href="/work/Testing">
+            	<h5>Testing</h5>
+              <p class="text-muted">Here's a unique preview text, so you can tell this is a new item.</p>
             </div>
            </a>
           </div>
