--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
        		</div>
             <div>
               <a href="/work/Moonfest">
-            	<h5>Moonfest</h5>
+            	<h5>moonfest</h5>
               <p class="text-muted">A logo for the University of Arizona's celebration of the Lunar Landing half centenary.</p>
             </div>
            </a>
