--- a/work/moonfest.html
+++ b/work/moonfest.html
@@ -17,7 +17,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="/assets/styles.css" rel="stylesheet">
 
- <title>Danny · Moonfest</title>
+ <title>Danny · moonfest</title>
     
 </head>
   
@@ -45,7 +45,7 @@
      <div class="py-5 container">
   <div class="row rows-cols-lg-2">
     <div class="col">
-      <h1>Moonfest</h1>
+      <h1>moonfest</h1>
         <h6>Author: </h6>
     	</div>
      	<div class="col">
