added case study images

--- a/work/clip-health.html
+++ b/work/clip-health.html
@@ -46,10 +46,9 @@
   <div class="row rows-cols-lg-2">
     <div class="col">
       <h1>Clip Health</h1>
-        <h6>Author: </h6>
     	</div>
-     	<div class="col">
-       <h4></h4>
+     	<div class="col pt-2">
+       <h4>Visual identity for a cutting edge Covid-19 diagnostic made to work on an iPhone.</h4>
     </div>
   </div>
 </div>
@@ -57,7 +56,7 @@
 <div class="py-5 container">
   <div class="row">
     <div class="col">
-<img width="100%" src="../assets/1920x1080-test.jpg">
+<img width="100%" src="../assets/clip.jpg">
       </div>
   </div>
 </div>
