--- a/work/aspera.html
+++ b/work/aspera.html
@@ -17,7 +17,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="/assets/styles.css" rel="stylesheet">
 
- <title>Danny · Test</title>
+ <title>Danny · Aspera</title>
     
 </head>
   
@@ -45,11 +45,10 @@
      <div class="py-5 container">
   <div class="row rows-cols-lg-2">
     <div class="col">
-      <h1>Test</h1>
-        <h6>Author: </h6>
+      <h1>Aspera</h1>
     	</div>
-     	<div class="col">
-       <h4>This is the excerpt text using a custom defined front matter variable called "preview"</h4>
+     	<div class="col pt-2">
+       <h4>Logo design and layout work for a post-grad pursuing NASA funding to build a cubesat sized orbital space telescope.</h4>
     </div>
   </div>
 </div>
@@ -57,7 +56,7 @@
 <div class="py-5 container">
   <div class="row">
     <div class="col">
-<img width="100%" src="../assets/1920x1080-test.jpg">
+<img width="100%" src="../assets/aspera.jpg">
       </div>
   </div>
 </div>
