--- a/work/nixie-watch.html
+++ b/work/nixie-watch.html
@@ -17,7 +17,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="/assets/styles.css" rel="stylesheet">
 
- <title>Danny · Testing</title>
+ <title>Danny · Nixie Watch</title>
     
 </head>
   
@@ -45,11 +45,10 @@
      <div class="py-5 container">
   <div class="row rows-cols-lg-2">
     <div class="col">
-      <h1>Testing</h1>
-        <h6>Author: </h6>
+      <h1>Nixie Watch</h1>
     	</div>
-     	<div class="col">
-       <h4>Here's a unique preview text, so you can tell this is a new item.</h4>
+     	<div class="col pt-2">
+       <h4>Shopify buildout with included product photography for a unique watch.</h4>
     </div>
   </div>
 </div>
@@ -57,7 +56,7 @@
 <div class="py-5 container">
   <div class="row">
     <div class="col">
-<img width="100%" src="../assets/1920x1080-test.jpg">
+<img width="100%" src="../assets/nixie.jpg">
       </div>
   </div>
 </div>
