New fonts and updated styles

--- a/about.html
+++ b/about.html
@@ -31,12 +31,12 @@
           </a>
         </div>
         <div class="col">
-          <div class="float-end">
-          <ul>
-          <a href='/'>work</a>
-          <a href='/about'>about</a>
-        </ul>
-        </div>
+          <nav>
+            <div class="float-end">
+              <a href='/'>work</a>
+              <a href='/about'>about</a>
+            </div>
+          </nav>
         </div>
       </div>
     </div>
@@ -49,12 +49,12 @@
         <img height="auto" width="100%" src="../assets/headshot.jpg">
       </div>
     </div>
-      <div class="col pb-5">
-          <h4>I’m Danny Pagano – a designer and photographer from Tucson, Arizona. I design simple things for clients with complex products and ideas.</h4>
+      <div class="col">
+          <h5>I’m Danny Pagano – a designer and photographer from Tucson, Arizona. I design simple things for clients with complex products and ideas.</h5>
   
-  <h4>I’ve been a professional designer with <a href="https://godatdesign.com">Godat Design</a> for the last six years, and I’m now taking on freelance work and exploring options for full or part time employment.</h4>
+  <p>I’ve been a professional designer with <a href="https://godatdesign.com">Godat Design</a> for the last six years, and I’m now taking on freelance work and exploring options for full or part time employment.</p>
   
-       <h4>For more about me, you can check out <a href="https://slickbrownfox.com">slickbrownfox.com</a></h4>
+       <p class="pb-3">For more about me, you can check out <a href="https://slickbrownfox.com">slickbrownfox.com</a></p>
   
         <div class="row">
           <div class="col-sm-6 pb-3">
@@ -86,25 +86,25 @@
   <div class="container-fluid">
     <div class="row row-cols-1 row-cols-sm-2 mx-2">
       <div class="col">
-        <p class=" mb-1">
+        <p class="mb-1 pt-2">
           <a href="#">Back to top</a>
         </p>
       </div>
 
       
       <div class="col">
-        <div class="row row-cols-1 row-cols-sm-2">
-          <div class="col-sm-6">
+        <div class="row row-cols-1 row-cols-sm-1 row-cols-lg-2">
+          <div class="col-sm-6 pt-2">
             <p class="text-muted">© 2021 Danny Pagano</p>
           </div>
         
           <div class="col-sm-6">
-            <div class="float-end">
-            <ul>
-              <a href='/'>work</a>
-              <a href='/about'>about</a>
-      </ul>
-          </div>
+            <nav>
+              <div class="float-sm-end">
+                <a href='/'>work</a>
+                <a href='/about'>about</a>
+              </div>
+            </nav>
           </div>
         </div>
       </div>
