--- a/work/aspera.html
+++ b/work/aspera.html
@@ -31,24 +31,24 @@
           </a>
         </div>
         <div class="col">
-          <div class="float-end">
-          <ul>
-          <a href='/'>work</a>
-          <a href='/about'>about</a>
-        </ul>
-        </div>
+          <nav>
+            <div class="float-end">
+              <a href='/'>work</a>
+              <a href='/about'>about</a>
+            </div>
+          </nav>
         </div>
       </div>
     </div>
 
 
      <div class="py-5 container">
-  <div class="row rows-cols-lg-2">
+  <div class="row row-cols-1 row-cols-sm-1 row-cols-lg-2 mx-2">
     <div class="col">
       <h1>Aspera</h1>
     	</div>
      	<div class="col pt-2">
-       <h4>Logo design and layout work for a post-grad pursuing NASA funding to build a cubesat sized orbital space telescope.</h4>
+       <h5>Logo design and layout work for a post-grad pursuing NASA funding to build a cubesat sized orbital space telescope.</h5>
     </div>
   </div>
 </div>
@@ -64,25 +64,25 @@
   <div class="container-fluid">
     <div class="row row-cols-1 row-cols-sm-2 mx-2">
       <div class="col">
-        <p class=" mb-1">
+        <p class="mb-1 pt-2">
           <a href="#">Back to top</a>
         </p>
       </div>
 
       
       <div class="col">
-        <div class="row row-cols-1 row-cols-sm-2">
-          <div class="col-sm-6">
+        <div class="row row-cols-1 row-cols-sm-1 row-cols-lg-2">
+          <div class="col-sm-6 pt-2">
             <p class="text-muted">© 2021 Danny Pagano</p>
           </div>
         
           <div class="col-sm-6">
-            <div class="float-end">
-            <ul>
-              <a href='/'>work</a>
-              <a href='/about'>about</a>
-      </ul>
-          </div>
+            <nav>
+              <div class="float-sm-end">
+                <a href='/'>work</a>
+                <a href='/about'>about</a>
+              </div>
+            </nav>
           </div>
         </div>
       </div>
