added related grid _include, added favicon, style tweaks

--- a/about.html
+++ b/about.html
@@ -42,19 +42,19 @@
     </div>
 
 
-     <div class="py-5 container-fluid">
+     <div class="py-5 container-fluid about">
   <div class="row row-cols-1 row-cols-md-2 mx-2">
-    <div class="col justify-content-center">
-      <div class="pb-5" style="max-width: 600px">
+    <div class="col">
+      <div class="pb-5" style="max-width:600px">
         <img height="auto" width="100%" src="../assets/headshot.jpg">
       </div>
     </div>
       <div class="col">
           <h5>I’m Danny Pagano – a designer and photographer from Tucson, Arizona. I design simple things for clients with complex products and ideas.</h5>
   
-  <p>I’ve been a professional designer with <a href="https://godatdesign.com">Godat Design</a> for the last six years, and I’m now taking on freelance work and exploring options for full or part time employment.</p>
+  <h5>I’ve been a professional designer with <a href="https://godatdesign.com">Godat Design</a> for the last six years, and I’m now taking on freelance work and exploring options for full or part time employment.</h5>
   
-       <p class="pb-3">For more about me, you can check out <a href="https://slickbrownfox.com">slickbrownfox.com</a></p>
+       <h5 class="pb-3">For more about me, you can check out <a href="https://slickbrownfox.com">slickbrownfox.com</a></h5>
   
         <div class="row">
           <div class="col-sm-6 pb-3">
@@ -87,7 +87,7 @@
     <div class="row row-cols-1 row-cols-sm-2 mx-2">
       <div class="col">
         <p class="mb-1 pt-2">
-          <a href="#">Back to top</a>
+          <a href="#">Back to Top</a>
         </p>
       </div>
 
@@ -95,7 +95,7 @@
       <div class="col">
         <div class="row row-cols-1 row-cols-sm-1 row-cols-lg-2">
           <div class="col-sm-6 pt-2">
-            <p class="text-muted">© 2021 Danny Pagano</p>
+            <p class="text-muted">© 2020 Danny Pagano</p>
           </div>
         
           <div class="col-sm-6">
