--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
        		</div>
             <div>
               <a href="/work/moonfest"><h5>Moonfest</h5></a>
-              <p class="text-muted">Logo design for the University of Arizona's half centenary celebration of the Apollo 11 moon landing.</p>
+              <p class="text-muted">Logo design for the University of Arizona's half centenary celebration of the Apollo 11 moon landing. Logo design for...</p>
             </div>
           </div>
         </div>
@@ -117,7 +117,7 @@
     <div class="row row-cols-1 row-cols-sm-2 mx-2">
       <div class="col">
         <p class="mb-1 pt-2">
-          <a href="#">Back to top</a>
+          <a href="#">Back to Top</a>
         </p>
       </div>
 
@@ -125,7 +125,7 @@
       <div class="col">
         <div class="row row-cols-1 row-cols-sm-1 row-cols-lg-2">
           <div class="col-sm-6 pt-2">
-            <p class="text-muted">© 2021 Danny Pagano</p>
+            <p class="text-muted">© 2020 Danny Pagano</p>
           </div>
         
           <div class="col-sm-6">
