removed SEO.html

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
           <h1>About</h1>
           <h5>Howdy, I’m Danny Pagano – a designer and photographer from Tucson, Arizona. I design simple things for clients with complex products and ideas.</h5>
   
-        <h5>I’ve been a senior designer at <a href="https://godatdesign.com" target="_blank"><span class="link">Godat Design</span></a> for the last six years, and I’m now taking on freelance work and exploring options for full or part time employment.</h5>
+        <h5>I’ve been a senior designer at <a href="https://godatdesign.com" target="_blank"><span class="link">Godat Design</span></a> for the last six years, and I’m now taking on freelance work.</h5>
   
        <h5 class="pb-3">For more about me, you can check out <a href="https://slickbrownfox.com" target="_blank"><span class="link">slickbrownfox.com</span></a></h5>
   
@@ -99,7 +99,7 @@
       <div class="pb-3 container-fluid">
         <div class="row">
           <div class="col">
-            <p class="text-muted pt-2">© 2021 Danny Pagano</p>
+            <p class="text-muted pt-2 copyright">© 2021 Danny Pagano</p>
           </div>
           <div class="col">
             <nav>
