--- a/colophon.html
+++ b/colophon.html
@@ -77,7 +77,7 @@
       <div class="pb-3 container-fluid">
         <div class="row">
           <div class="col">
-            <p class="text-muted pt-2">© 2021 Danny Pagano</p>
+            <p class="text-muted pt-2 copyright">© 2021 Danny Pagano</p>
           </div>
           <div class="col">
             <nav>
