--- a/work/aspera.html
+++ b/work/aspera.html
@@ -139,7 +139,7 @@
           <div class="col mb-2">
             <div>
               <div class="ratio pb-3"  style="--aspect-ratio: 66%">
-                  <a href="/work/clip-health"><img width="100%" src="../assets/clip.jpg"></a><a href="/work/clip-health"><img width="100%" src=""></a><a href="/work/clip-health"><img width="100%" src=""></a>
+                  <a href="/work/clip-health"><img width="100%" src="../assets/Clip-Health-06.jpg"></a><a href="/work/clip-health"><img width="100%" src=""></a><a href="/work/clip-health"><img width="100%" src=""></a><a href="/work/clip-health"><img width="100%" src=""></a><a href="/work/clip-health"><img width="100%" src=""></a><a href="/work/clip-health"><img width="100%" src=""></a><a href="/work/clip-health"><img width="100%" src=""></a><a href="/work/clip-health"><img width="100%" src=""></a><a href="/work/clip-health"><img width="100%" src=""></a>
               </div>
               
               <div>
@@ -212,7 +212,7 @@
       <div class="pb-3 container-fluid">
         <div class="row">
           <div class="col">
-            <p class="text-muted pt-2">© 2021 Danny Pagano</p>
+            <p class="text-muted pt-2 copyright">© 2021 Danny Pagano</p>
           </div>
           <div class="col">
             <nav>
