--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
       <div class="row mx-2">
         <div class="col">
           <a href="#">
-            <h3><a href="/">danny pagano</a></h3>
+            <h3 class="pt-1"><a href="/">danny pagano</a></h3>
           </a>
         </div>
         <div class="col">
@@ -83,10 +83,10 @@
           <p>I acknowledge the Tohono O’odham, Hohokam, and Pascua Yaqui peoples who are the traditional and ancestral stewards of the lands where I live and work. I pay respect to their Elders past and present and to all indigenous peoples across the globe.</p>
           
           
-          <h6 class="text-muted">Colophon</h6>
+          <h6 class="text-muted pt-3">Colophon</h6>
           <p>Design, development and photography by Danny Pagano.</p> <p>This site is generated using <a href="https://jekyllrb.com/" target="_blank" class="link">Jekyll</a> and hosted on <a href="https://github.com/" target="_blank" class="link">Github.</a></p>
 
-          <p>Work samples shown on this site were completed while employed at Godat Design, except where otherwise noted.</p>
+          <p>Work samples shown were completed while employed at Godat Design, except where otherwise noted.</p>
 
           <p>Fonts are <a href="https://www.youworkforthem.com/font/T9667/alliance" target="_blank" class="link">Alliance</a> by <a href="https://www.degarism.com/" target="_blank" class="link">Degarism Studio</a> and <a href="https://www.youworkforthem.com/font/T11632/generisch-mono" target="_blank" class="link">Generisch Mono</a> by Akufadhl.</p>
         </div>
