added case study images

--- a/work/htg.html
+++ b/work/htg.html
@@ -126,7 +126,7 @@
           <div class="col mb-2">
             <div>
               <div class="ratio pb-3"  style="--aspect-ratio: 66%">
-                  <a href="/work/aspera"><img width="100%" src="../assets/Aspera9.png"></a><a href="/work/aspera"><img width="100%" src=""></a><a href="/work/aspera"><img width="100%" src=""></a><a href="/work/aspera"><img width="100%" src=""></a><a href="/work/aspera"><img width="100%" src=""></a><a href="/work/aspera"><img width="100%" src=""></a><a href="/work/aspera"><img width="100%" src=""></a><a href="/work/aspera"><img width="100%" src=""></a><a href="/work/aspera"><img width="100%" src=""></a>
+                  <a href="/work/aspera"><img width="100%" src="../assets/aspera9.png"></a><a href="/work/aspera"><img width="100%" src=""></a><a href="/work/aspera"><img width="100%" src=""></a><a href="/work/aspera"><img width="100%" src=""></a><a href="/work/aspera"><img width="100%" src=""></a><a href="/work/aspera"><img width="100%" src=""></a><a href="/work/aspera"><img width="100%" src=""></a><a href="/work/aspera"><img width="100%" src=""></a><a href="/work/aspera"><img width="100%" src=""></a>
               </div>
               
               <div>
