--- a/work/moonfest.html
+++ b/work/moonfest.html
@@ -26,12 +26,12 @@
 </head>
   
   <body>
-    <main>
+    <main class="px-3 mx-4">
          <div class="py-3 pt-5 container-fluid">
       <div class="row mx-2">
-        <div class="col">
+        <div class="col col-sm-auto">
           <a href="#">
-            <h3 class="pt-1"><a href="/">danny pagano</a></h3>
+            <h3 class="pt-1"><a href="/"><span class="dot">dp</span> danny pagano</a></h3>
           </a>
         </div>
         <div class="col">
