--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 </head>
   
   <body>
-    <main class="px-3 mx-4">
-         <div class="py-3 pt-5 container-fluid">
+    <main class="py-3">
+         <div class="py-3 pt-5 my-5 container-fluid">
       <div class="row mx-2">
         <div class="col col-sm-auto">
           <a href="#">
@@ -47,7 +47,7 @@
 
 
      <div class="py-5 container-fluid">
-  <div class="row row-cols-1 row-cols-lg-2 mx-2">
+  <div class="row row-cols-1 row-cols-lg-2 mx-2 intro-block">
     
     <div class="col">
       <h1>Howdy!</h1>
