--- a/work/joellen-russell.html
+++ b/work/joellen-russell.html
@@ -26,8 +26,8 @@
 </head>
   
   <body>
-    <main class="px-3 mx-4">
-         <div class="py-3 pt-5 container-fluid">
+    <main class="py-3">
+         <div class="py-3 pt-5 my-5 container-fluid">
       <div class="row mx-2">
         <div class="col col-sm-auto">
           <a href="#">
