resized nav on mobile

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="col">
           <nav>
-            <div class="float-end">
+            <div class="float-end" id="navcontainer">
               <a href='/'>Work</a>
               <a href='/about'>About</a>
             </div>
@@ -44,7 +44,6 @@
         </div>
       </div>
     </div>
-
 
      <div class="py-5 container-fluid">
   <div class="row row-cols-1 row-cols-lg-2 mx-2 intro-block">
@@ -210,7 +209,7 @@
           <a href="#">Back to Top <span class="arrow">↖</span></a>
         </h5>
       </div>
-      
+
       <div class="pb-3 container-fluid">
         <div class="row">
           <div class="col">
@@ -218,7 +217,7 @@
           </div>
           <div class="col">
             <nav>
-              <div class="float-end">
+              <div class="float-end" id="footercontainer">
                 <a href='/'>Work</a>
                 <a href='/about'>About</a>
               </div>
@@ -229,6 +228,7 @@
     </div>
   </div>
 </footer>
+
     </main>
   </body>
   
