--- a/work/aspera.html
+++ b/work/aspera.html
@@ -36,7 +36,7 @@
         </div>
         <div class="col">
           <nav>
-            <div class="float-end">
+            <div class="float-end" id="navcontainer">
               <a href='/'>Work</a>
               <a href='/about'>About</a>
             </div>
@@ -45,10 +45,12 @@
       </div>
     </div>
 
-
-     <div id="disclaimer">
-  <h6>Project completed at Godat Design</h6>
+     <!---
+<div id="disclaimer">
+  <h6>Project completed at <a href="https://godatdesign.com">Godat Design</a></h6>
 </div>
+
+----!>
 
 <div class="py-5 container">
   <div class="row row-cols-1 row-cols-sm-1 row-cols-lg-2 work">
@@ -263,7 +265,7 @@
           <a href="#">Back to Top <span class="arrow">↖</span></a>
         </h5>
       </div>
-      
+
       <div class="pb-3 container-fluid">
         <div class="row">
           <div class="col">
@@ -271,7 +273,7 @@
           </div>
           <div class="col">
             <nav>
-              <div class="float-end">
+              <div class="float-end" id="footercontainer">
                 <a href='/'>Work</a>
                 <a href='/about'>About</a>
               </div>
@@ -282,6 +284,7 @@
     </div>
   </div>
 </footer>
+
     </main>
   </body>
   
