--- a/typography.html
+++ b/typography.html
@@ -36,7 +36,7 @@
         </div>
         <div class="col">
           <nav>
-            <div class="float-end">
+            <div class="float-end" id="navcontainer">
               <a href='/'>Work</a>
               <a href='/about'>About</a>
             </div>
@@ -44,7 +44,6 @@
         </div>
       </div>
     </div>
-
 
      <div class="py-5 container">
   <div class="row ">
@@ -77,7 +76,7 @@
           <a href="#">Back to Top <span class="arrow">↖</span></a>
         </h5>
       </div>
-      
+
       <div class="pb-3 container-fluid">
         <div class="row">
           <div class="col">
@@ -85,7 +84,7 @@
           </div>
           <div class="col">
             <nav>
-              <div class="float-end">
+              <div class="float-end" id="footercontainer">
                 <a href='/'>Work</a>
                 <a href='/about'>About</a>
               </div>
@@ -96,6 +95,7 @@
     </div>
   </div>
 </footer>
+
     </main>
   </body>
   
