--- a/work/natural-selection-2.html
+++ b/work/natural-selection-2.html
@@ -36,7 +36,7 @@
         </div>
         <div class="col">
           <nav>
-            <div class="float-end">
+            <div class="float-end" id="navcontainer">
               <a href='/'>Work</a>
               <a href='/about'>About</a>
             </div>
@@ -44,7 +44,6 @@
         </div>
       </div>
     </div>
-
 
      <div class="pt-5 pb-2 container">
   <div class="row row-cols-1 row-cols-sm-1 row-cols-lg-2 work">
@@ -252,7 +251,7 @@
           <a href="#">Back to Top <span class="arrow">↖</span></a>
         </h5>
       </div>
-      
+
       <div class="pb-3 container-fluid">
         <div class="row">
           <div class="col">
@@ -260,7 +259,7 @@
           </div>
           <div class="col">
             <nav>
-              <div class="float-end">
+              <div class="float-end" id="footercontainer">
                 <a href='/'>Work</a>
                 <a href='/about'>About</a>
               </div>
@@ -271,6 +270,7 @@
     </div>
   </div>
 </footer>
+
     </main>
   </body>
   
