--- a/work/htg.html
+++ b/work/htg.html
@@ -31,7 +31,7 @@
       <div class="row mx-2">
         <div class="col col-sm-auto">
           <a href="#">
-            <h3 class="pt-1"><a href="/"><span class="dot">dp</span> danny pagano</a></h3>
+            <h3 class="pt-1" id="logo"><a href="/"><span class="dot">dp</span> danny pagano</a></h3>
           </a>
         </div>
         <div class="col">
