--- a/work/robert-glennon.html
+++ b/work/robert-glennon.html
@@ -29,12 +29,12 @@
     <main class="py-3" id="container">
          <div class="py-3 pt-5 my-5 container-fluid">
       <div class="row mx-2">
-        <div class="col">
+        <div class="col col-sm">
           <a href="#">
             <h3 class="pt-1" id="logo"><a href="/"><span class="dot">dp</span> danny pagano</a></h3>
           </a>
         </div>
-        <div class="col">
+        <div class="col col-sm">
           <nav>
             <div class="float-end" id="navcontainer">
               <a href='/'>Work</a>
