updated nixie watch case study

--- a/work/nixie-watch.html
+++ b/work/nixie-watch.html
@@ -61,18 +61,95 @@
     
   </div>
 </div>
-
 <div class="mt-5 py-5 container">
   <div class="row work">
     <div class="col">
       <div class="ratio ratio-16x9 pb-3">
-        <iframe src="https://player.vimeo.com/video/496497356?autoplay=1&muted=1&loop=1&autopause=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/563030173?autoplay=1&muted=1&loop=1&autopause=0 width="640" height="360" frameborder="1" allow="autoplay; fullscreen" allowfullscreen></iframe>
       </div>
     </div>
   </div>
 </div>
 
+<div class="py-5 container">
+  <div class="row work">
+    <div class="col">
+      <div class="ratio" style="--aspect-ratio: 66%">
+        <img src=../assets/nixgrid.png>
+      </div>
+      </div>
+    </div>
+</div>
 
+<div class="mt-5 py-5 container">
+  <div class="row work">
+    <div class="col">
+      <div class="ratio ratio-16x9 pb-3">
+        <iframe src="https://player.vimeo.com/video/563030150?autoplay=1&muted=1&loop=1&autopause=0 width="640" height="360" frameborder="1" allow="autoplay; fullscreen" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="mt-5 py-5 container">
+  <div class="row work">
+    <div class="col">
+      <div class="ratio ratio-16x9 pb-3">
+        <iframe src="https://player.vimeo.com/video/563030130?autoplay=1&muted=1&loop=1&autopause=0 width="640" height="360" frameborder="1" allow="autoplay; fullscreen" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="py-5 container">
+  <div class="row row-cols-1 row-cols-sm-1 row-cols-lg-2 work">
+    <div class="col pb-3">
+      <div class="ratio" style="--aspect-ratio: 66%">
+     <img src="../assets/nixgold.png">
+
+      </div>
+       <h6 class="pt-2 text-muted">Design Exploration</h6>
+    </div>
+
+    <div class="col pb-3">
+       <div class="ratio" style="--aspect-ratio: 66%">
+     <img src=../assets/nixserial.png>
+
+      </div>
+      <h6 class="pt-2 text-muted"></h6>
+    </div>
+  </div>
+</div>
+
+<div class="mt-5 py-5 container">
+  <div class="row work">
+    <div class="col">
+      <div class="ratio ratio-16x9 pb-3">
+        <iframe src="https://player.vimeo.com/video/563030226?autoplay=1&muted=1&loop=1&autopause=0 width="640" height="360" frameborder="1" allow="autoplay; fullscreen" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="mt-5 py-5 container">
+  <div class="row work">
+    <div class="col">
+      <div class="ratio ratio-16x9 pb-3">
+        <iframe src="https://player.vimeo.com/video/563030111?autoplay=1&muted=1&loop=1&autopause=0 width="640" height="360" frameborder="1" allow="autoplay; fullscreen" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="py-5 container">
+  <div class="row work">
+    <div class="col">
+      <div class="ratio" style="--aspect-ratio: 66%">
+        <img src=../assets/nixrainbow.png>
+      </div>
+      </div>
+    </div>
+</div>
 
 
 <div>
