front matter-ified video src links

--- a/work/aspera.html
+++ b/work/aspera.html
@@ -47,7 +47,7 @@
 
      <!---
 <div id="disclaimer">
-  <h6>Project completed at <a href="https://godatdesign.com">Godat Design</a></h6>
+  <h6 class="pt-2">Work completed at <a href="https://godatdesign.com" target="_blank" class="link">Godat Design ↗</a></h6>
 </div>
 
 ----!>
@@ -66,6 +66,10 @@
     </div>
 
     <div class="col pt-2">
+      <div id="disclaimer">
+  <h6 class="pt-2">Work completed at <a href="https://godatdesign.com" target="_blank" class="link">Godat Design ↗</a></h6>
+</div>
+
       <h5 class="text-muted">Logo design for a first of its kind NASA mission to study previously unseen galactic filaments in UV.</h5>
     </div>
   </div>
