--- a/work/clip-health.html
+++ b/work/clip-health.html
@@ -60,6 +60,10 @@
     </div>
 
     <div class="col pt-2">
+      <div id="disclaimer">
+  <h6 class="pt-2">Work completed at <a href="https://godatdesign.com" target="_blank" class="link">Godat Design ↗</a></h6>
+</div>
+
       <h5 class="text-muted">Visual identity for a cutting-edge Covid-19 diagnostic, made to work on an iPhone.</h5>
     </div>
 
