--- a/work/moonfest.html
+++ b/work/moonfest.html
@@ -56,6 +56,10 @@
     </div>
 
     <div class="col pt-2">
+      <div id="disclaimer">
+  <h6 class="pt-2">Work completed at <a href="https://godatdesign.com" target="_blank" class="link">Godat Design ↗</a></h6>
+</div>
+
       <h5 class="text-muted">Logo design for the University of Arizona's half-centenary celebration of the Apollo 11 moon landing.</h5>
     </div>
 
