--- a/work/tracknorth.html
+++ b/work/tracknorth.html
@@ -60,6 +60,10 @@
     </div>
 
     <div class="col pt-2">
+      <div id="disclaimer">
+  <h6 class="pt-2">Work completed at <a href="https://godatdesign.com" target="_blank" class="link">Godat Design ↗</a></h6>
+</div>
+
       <h5 class="text-muted">Identity design for a rail services conglomerate serving the northern United States.</h5>
     </div>
 
