added google analytics script

--- a/work/clip-health.html
+++ b/work/clip-health.html
@@ -21,6 +21,18 @@
     <!-- Custom CSS -->
     <link href="/assets/styles.css" rel="stylesheet">
 
+    <!-- Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WP26JY5HXG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WP26JY5HXG');
+</script>
+
+
  <title>Danny · Clip Health</title>
 
 </head>
