--- a/index.html
+++ b/index.html
@@ -33,6 +33,23 @@
 </script>
 
 
+    <!-- Open Graph -->
+    <meta content="Danny" property="og:site_name">
+
+  <meta content="Home" property="og:title">
+
+
+  <meta content="Howdy! I’m Danny Pagano – a designer and photographer from Tucson, Arizona. I design simple things for complex clients." property="og:description">
+
+
+  <meta content="https://dannypagano.com/" property="og:url">
+
+
+
+  <meta content="logo.png" property="og:image">
+
+
+
  <title>Danny · Home</title>
 
 </head>
@@ -226,7 +243,7 @@
 
               <div>
                 <a href="/work/optical-support-inc"><h5>Optical Support, Inc.</h5></a>
-                <p class="text-muted">Photography and marketing support for a local optomechanical engineering firm.</p>
+                <p class="text-muted"></p>
               </div>
             </div>
           </div>
