--- a/about.html
+++ b/about.html
@@ -33,6 +33,23 @@
 </script>
 
 
+    <!-- Open Graph -->
+    <meta content="Danny" property="og:site_name">
+
+  <meta content="About" property="og:title">
+
+
+  <meta content="Howdy! I’m Danny Pagano – a designer and photographer from Tucson, Arizona. I design simple things for complex clients." property="og:description">
+
+
+  <meta content="https://dannypagano.com/about" property="og:url">
+
+
+
+  <meta content="logo.png" property="og:image">
+
+
+
  <title>Danny · About</title>
 
 </head>
