--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
 
-  <meta content="logo.png" property="og:image">
+  <meta content="images/opengraph.png" property="og:image">
 
 
 
@@ -243,7 +243,7 @@
 
               <div>
                 <a href="/work/optical-support-inc"><h5>Optical Support, Inc.</h5></a>
-                <p class="text-muted"></p>
+                <p class="text-muted">Photography and marketing support for a local optomechanical engineering firm.</p>
               </div>
             </div>
           </div>
