--- a/work/optical-support-inc.html
+++ b/work/optical-support-inc.html
@@ -39,7 +39,7 @@
   <meta content="Optical Support, Inc." property="og:title">
 
 
-  <meta content="Howdy! I’m Danny Pagano – a designer and photographer from Tucson, Arizona. I design simple things for complex clients." property="og:description">
+  <meta content="Photography and marketing support for a local optomechanical engineering firm." property="og:description">
 
 
   <meta content="https://dannypagano.com/work/optical-support-inc" property="og:url">
@@ -49,7 +49,8 @@
 
 
 
-  <meta content="/images/osi1.jpg" property="og:image">
+
+  <meta content="/images/600w/osi1.jpg" property="og:image">
 
 
 
