--- a/work/aspera.html
+++ b/work/aspera.html
@@ -49,7 +49,8 @@
 
 
 
-  <meta content="/images/asp1.jpg" property="og:image">
+
+  <meta content="/images/600w/asp1.jpg" property="og:image">
 
 
 
