--- a/work/clip-health.html
+++ b/work/clip-health.html
@@ -49,7 +49,8 @@
 
 
 
-  <meta content="/images/clp1.jpg" property="og:image">
+
+  <meta content="/images/600w/clp1.jpg" property="og:image">
 
 
 
