--- a/work/moonfest.html
+++ b/work/moonfest.html
@@ -49,7 +49,8 @@
 
 
 
-  <meta content="/images/mnf1.jpg" property="og:image">
+
+  <meta content="/images/600w/mnf1.jpg" property="og:image">
 
 
 
