--- a/work/natural-selection-2.html
+++ b/work/natural-selection-2.html
@@ -49,7 +49,8 @@
 
 
 
-  <meta content="/images/nst1.jpg" property="og:image">
+
+  <meta content="/images/600w/nst1.jpg" property="og:image">
 
 
 
