--- a/work/nixie-watch.html
+++ b/work/nixie-watch.html
@@ -49,7 +49,8 @@
 
 
 
-  <meta content="/images/nix1.jpg" property="og:image">
+
+  <meta content="/images/600w/nix1.jpg" property="og:image">
 
 
 
