--- a/work/tracknorth.html
+++ b/work/tracknorth.html
@@ -49,7 +49,8 @@
 
 
 
-  <meta content="/images/trk1.jpg" property="og:image">
+
+  <meta content="/images/600w/trk1.jpg" property="og:image">
 
 
 
