--- a/typography.html
+++ b/typography.html
@@ -46,7 +46,7 @@
 
 
 
-  <meta content="images/opengraph.png" property="og:image">
+  <meta content="../images/opengraph.png" property="og:image">
 
 
 
