--- a/work/moonfest.html
+++ b/work/moonfest.html
@@ -50,7 +50,7 @@
 
 
 
-  <meta content="/images/600w/mnf1.jpg" property="og:image">
+  <meta content="../images/600w/mnf1.jpg" property="og:image">
 
 
 
