--- a/work/nixie-watch.html
+++ b/work/nixie-watch.html
@@ -50,7 +50,7 @@
 
 
 
-  <meta content="/images/600w/nix1.jpg" property="og:image">
+  <meta content="../images/600w/nix1.jpg" property="og:image">
 
 
 
