--- a/work/optical-support-inc.html
+++ b/work/optical-support-inc.html
@@ -50,7 +50,7 @@
 
 
 
-  <meta content="/images/600w/osi1.jpg" property="og:image">
+  <meta content="../images/600w/osi1.jpg" property="og:image">
 
 
 
