troubleshooting og:image

--- a/work/tracknorth.html
+++ b/work/tracknorth.html
@@ -50,7 +50,7 @@
 
 
 
-  <meta content="../images/600w/trk1.jpg" property="og:image">
+  <meta content="https://dannypagano.com//images/1300w/trk1.jpg" property="og:image">
 
 
 
