--- a/work/aspera.html
+++ b/work/aspera.html
@@ -50,7 +50,7 @@
 
 
 
-  <meta content="../images/600w/asp1.jpg" property="og:image">
+  <meta content="https://dannypagano.com//images/1300w/asp1.jpg" property="og:image">
 
 
 
