--- a/work/clip-health.html
+++ b/work/clip-health.html
@@ -50,7 +50,7 @@
 
 
 
-  <meta content="../images/600w/clp1.jpg" property="og:image">
+  <meta content="https://dannypagano.com//images/1300w/clp1.jpg" property="og:image">
 
 
 
