--- a/work/natural-selection-2.html
+++ b/work/natural-selection-2.html
@@ -50,7 +50,7 @@
 
 
 
-  <meta content="../images/600w/nst1.jpg" property="og:image">
+  <meta content="https://dannypagano.com//images/1300w/nst1.jpg" property="og:image">
 
 
 
