added twittercard support

--- a/work/aspera.html
+++ b/work/aspera.html
@@ -54,6 +54,24 @@
 
 
 
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@site_username">
+<meta name="twitter:creator" content="@creator_username">
+
+  <meta name="twitter:title" content="Aspera">
+
+
+  <meta name="twitter:url" content="https://dannypagano.com/work/aspera">
+
+
+  <meta name="twitter:description" content="Logo design for a first of its kind NASA mission to study previously unseen galactic filaments in UV.">
+
+
+  <meta name="twitter:image:src" content="https://dannypagano.com//images/1300w/asp1.jpg">
+
+
+
  <title>Danny · Aspera</title>
 
 </head>
