--- a/work/clip-health.html
+++ b/work/clip-health.html
@@ -54,6 +54,24 @@
 
 
 
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@site_username">
+<meta name="twitter:creator" content="@creator_username">
+
+  <meta name="twitter:title" content="Clip Health">
+
+
+  <meta name="twitter:url" content="https://dannypagano.com/work/clip-health">
+
+
+  <meta name="twitter:description" content="Visual identity for a cutting-edge Covid-19 diagnostic, made to work on an iPhone.">
+
+
+  <meta name="twitter:image:src" content="https://dannypagano.com//images/1300w/clp1.jpg">
+
+
+
  <title>Danny · Clip Health</title>
 
 </head>
