--- a/work/nixie-watch.html
+++ b/work/nixie-watch.html
@@ -54,6 +54,24 @@
 
 
 
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@site_username">
+<meta name="twitter:creator" content="@creator_username">
+
+  <meta name="twitter:title" content="Nixie Watch">
+
+
+  <meta name="twitter:url" content="https://dannypagano.com/work/nixie-watch">
+
+
+  <meta name="twitter:description" content="Shopify website build with commissioned product photography for a unique watch.">
+
+
+  <meta name="twitter:image:src" content="https://dannypagano.com//images/1300w/nix1.jpg">
+
+
+
  <title>Danny · Nixie Watch</title>
 
 </head>
