--- a/work/optical-support-inc.html
+++ b/work/optical-support-inc.html
@@ -54,6 +54,24 @@
 
 
 
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@site_username">
+<meta name="twitter:creator" content="@creator_username">
+
+  <meta name="twitter:title" content="Optical Support, Inc.">
+
+
+  <meta name="twitter:url" content="https://dannypagano.com/work/optical-support-inc">
+
+
+  <meta name="twitter:description" content="Photography and marketing support for a local optomechanical engineering firm.">
+
+
+  <meta name="twitter:image:src" content="https://dannypagano.com//images/1300w/osi1.jpg">
+
+
+
  <title>Danny · Optical Support, Inc.</title>
 
 </head>
