--- a/about.html
+++ b/about.html
@@ -50,6 +50,24 @@
 
 
 
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@site_username">
+<meta name="twitter:creator" content="@creator_username">
+
+  <meta name="twitter:title" content="About">
+
+
+  <meta name="twitter:url" content="https://dannypagano.com/about">
+
+
+  <meta name="twitter:description" content="Howdy! I’m Danny Pagano – a designer and photographer from Tucson, Arizona. I design simple things for complex clients.">
+
+
+  <meta name="twitter:image:src" content=""https://dannypagano.com/images/opengraph.png">
+
+
+
  <title>Danny · About</title>
 
 </head>
