--- a/work/moonfest.html
+++ b/work/moonfest.html
@@ -54,6 +54,24 @@
 
 
 
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@site_username">
+<meta name="twitter:creator" content="@creator_username">
+
+  <meta name="twitter:title" content="Moonfest">
+
+
+  <meta name="twitter:url" content="https://dannypagano.com/work/moonfest">
+
+
+  <meta name="twitter:description" content="Logo design for the University of Arizona's half-centenary celebration of the Apollo 11 moon landing.">
+
+
+  <meta name="twitter:image:src" content="https://dannypagano.com//images/1300w/mnf1.jpg">
+
+
+
  <title>Danny · Moonfest</title>
 
 </head>
