--- a/work/natural-selection-2.html
+++ b/work/natural-selection-2.html
@@ -54,6 +54,24 @@
 
 
 
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@site_username">
+<meta name="twitter:creator" content="@creator_username">
+
+  <meta name="twitter:title" content="Natural Selection 2">
+
+
+  <meta name="twitter:url" content="https://dannypagano.com/work/natural-selection-2">
+
+
+  <meta name="twitter:description" content="Worldbuilding and production design work for a Sci-fi first-person shooter title on PC.">
+
+
+  <meta name="twitter:image:src" content="https://dannypagano.com//images/1300w/nst1.jpg">
+
+
+
  <title>Danny · Natural Selection 2</title>
 
 </head>
