--- a/work/tracknorth.html
+++ b/work/tracknorth.html
@@ -54,6 +54,24 @@
 
 
 
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@site_username">
+<meta name="twitter:creator" content="@creator_username">
+
+  <meta name="twitter:title" content="Track North">
+
+
+  <meta name="twitter:url" content="https://dannypagano.com/work/tracknorth">
+
+
+  <meta name="twitter:description" content="Identity design for a rail services conglomerate serving the northern United States.">
+
+
+  <meta name="twitter:image:src" content="https://dannypagano.com//images/1300w/trk1.jpg">
+
+
+
  <title>Danny · Track North</title>
 
 </head>
