troubleshooting twitter card

--- a/work/clip-health.html
+++ b/work/clip-health.html
@@ -55,7 +55,7 @@
 
 
     <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@site_username">
 <meta name="twitter:creator" content="@creator_username">
 
@@ -66,6 +66,8 @@
 
 
   <meta name="twitter:description" content="Visual identity for a cutting-edge Covid-19 diagnostic, made to work on an iPhone.">
+
+
 
 
   <meta name="twitter:image:src" content="https://dannypagano.com//images/1300w/clp1.jpg">
