--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 
 
     <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@site_username">
 <meta name="twitter:creator" content="@creator_username">
 
@@ -64,7 +64,7 @@
   <meta name="twitter:description" content="Howdy! I’m Danny Pagano – a designer and photographer from Tucson, Arizona. I design simple things for complex clients.">
 
 
-  <meta name="twitter:image:src" content=""https://dannypagano.com/images/opengraph.png">
+  <meta name="twitter:image:src" content="https://dannypagano.com/images/opengraph.png">
 
 
 
