--- a/work/aspera.html
+++ b/work/aspera.html
@@ -55,7 +55,7 @@
 
 
     <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@site_username">
 <meta name="twitter:creator" content="@creator_username">
 
@@ -66,6 +66,8 @@
 
 
   <meta name="twitter:description" content="Logo design for a first of its kind NASA mission to study previously unseen galactic filaments in UV.">
+
+
 
 
   <meta name="twitter:image:src" content="https://dannypagano.com//images/1300w/asp1.jpg">
