--- a/work/natural-selection-2.html
+++ b/work/natural-selection-2.html
@@ -55,7 +55,7 @@
 
 
     <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@site_username">
 <meta name="twitter:creator" content="@creator_username">
 
@@ -66,6 +66,8 @@
 
 
   <meta name="twitter:description" content="Worldbuilding and production design work for a Sci-fi first-person shooter title on PC.">
+
+
 
 
   <meta name="twitter:image:src" content="https://dannypagano.com//images/1300w/nst1.jpg">
