--- a/work/nixie-watch.html
+++ b/work/nixie-watch.html
@@ -55,7 +55,7 @@
 
 
     <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@site_username">
 <meta name="twitter:creator" content="@creator_username">
 
@@ -66,6 +66,8 @@
 
 
   <meta name="twitter:description" content="Shopify website build with commissioned product photography for a unique watch.">
+
+
 
 
   <meta name="twitter:image:src" content="https://dannypagano.com//images/1300w/nix1.jpg">
