--- a/work/fairwheel.html
+++ b/work/fairwheel.html
@@ -187,7 +187,7 @@
       </div>
 <div class="col-sm-6 pb-3">
   <h4>Fairwheel Bikes is a one of Tucson's premiere bike shops catering to cyclists of all varities. </h4>
-  <h5 class="text-muted">Retailers of high-end and exotic bikes and components, Fairwheel has collaborated with artist and designer Geoff McFetridge on several builds, and works with an arry of custom framebuilders to provide one of a kind bikes for their clients.</h5>
+  <h5 class="text-muted">Retailers of high-end and exotic bikes and components, Fairwheel has collaborated with artist and designer Geoff McFetridge on several builds, and works with an array of custom framebuilders to provide one of a kind bikes for their clients.</h5>
 </div>
 </div>
 </div>
