--- a/work/aspera.html
+++ b/work/aspera.html
@@ -246,7 +246,7 @@
           <div class="col mb-2">
             <div>
               <div class="ratio pb-3"  style="--aspect-ratio: 66%">
-                <a href="/work/scintillation-nanotechnologies">
+                <a href="/work/SNT">
                 
                 <img
   src="/snt4.png"
@@ -259,7 +259,7 @@
               </div>
 
               <div>
-                <a href="/work/scintillation-nanotechnologies"><h5>Scintillation Nanotechnologies</h5></a>
+                <a href="/work/SNT"><h5>Scintillation Nanotechnologies</h5></a>
                 <p class="text-muted">Identity design for a life sciences startup empowering new, unseen insights in biological research.</p>
               </div>
             </div>
