added subtle animation, updated disclaimer snippet

--- a/work/aspera.html
+++ b/work/aspera.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Update These -->
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
@@ -20,6 +20,9 @@
 
     <!-- Custom CSS -->
     <link href="/assets/styles.css" rel="stylesheet">
+
+    <!-- CSS Animations -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
     <!-- Google Analytics -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -77,9 +80,8 @@
  <title>Danny · Aspera</title>
 
 </head>
-  <body>
-    <main class="py-3" id="container-fluid">
-         <div class="py-3 pt-5 my-5 container-fluid">
+  <body class="animate__animated animate__fadeIn">
+        <div class="py-3 pt-5 my-5 container-fluid">
       <div class="row mx-2">
         <div class="col col-sm">
           <a href="#">
@@ -97,15 +99,10 @@
       </div>
     </div>
 
-     <!---
-<div id="disclaimer">
-  <h6 class="pt-2">Work completed at <a href="https://godatdesign.com" target="_blank" class="link">Godat Design ↗</a></h6>
-</div>
-
-----!>
-
-<div class="py-5 container">
+    <main class="py-3" id="container-fluid">
+     <div class="pt-5 pb-3 container">
   <div class="row row-cols-1 row-cols-sm-1 row-cols-lg-2 work">
+
     <div class="col">
       <h1>Aspera</h1>
       <div>
@@ -123,9 +120,12 @@
 </div>
 
       <h5 class="text-muted">Logo design for a first of its kind NASA mission to study previously unseen galactic filaments in UV.</h5>
+
     </div>
+
   </div>
 </div>
+
 
 <div class="py-5 container">
   <div class="row work">
@@ -359,35 +359,23 @@
 
 </div>
 
-     <footer class="pb-5">
-  <div class="container-fluid">
-    <div class="row row-cols-1 row-cols-sm-1 mx-2">
-      <div class="col">
-        <h5>
-          <a href="#">Back to Top <span class="arrow">↖</span></a>
-        </h5>
-      </div>
-
-      <div class="pb-3 container-fluid">
-        <div class="row">
-          <div class="col">
-            <p class="text-muted pt-2 copyright">© 2021 Danny Pagano</p>
-          </div>
-          <div class="col">
-            <nav>
-              <div class="float-end" id="footercontainer">
-                <a href='/'>Work</a>
-                <a href='/about'>About</a>
-              </div>
-            </nav>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</footer>
-
     </main>
+    <div class="py-5 container-fluid">
+  <div class="row row-cols-1 row-cols-lg-2 mx-2">
+
+  <div class="col col-sm-6 col-md-6 col-lg-3">
+    <h5>
+        <a href="#">Back to Top <span class="arrow">↖</span></a>
+    </h5>
+  </div>
+
+  <div class="col col-sm-6 col-md-6 col-lg-3">
+      <p class="text-muted pt-2 copyright">© 2022 Danny Pagano</p>
+  </div>
+
+</div>
+</div>
+
   </body>
 
 </html>
